--- a/toys_shop/server/products/templates/products/product_edit.html
+++ b/toys_shop/server/products/templates/products/product_edit.html
@@ -16,4 +16,21 @@
         <div class="delete"><a href="{% url 'products:delete' item.id %}">Удалить</a></div>
     </div>
     {% endfor %}
+    <div class="pagination">
+        {% if page_obj.has_previous %}
+        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Предыдущая</a>
+        {% endif %}
+        {% if page_obj.paginator.num_pages > 1 %}
+        {% for number in page_obj.paginator.page_range %}
+        {% if number == page_obj.number %}
+        <span class="page-link active">{{ number }}</span>
+        {% else %}
+        <a class="page-link" href="?page={{ number }}">{{ number }}</a>
+        {% endif %}
+        {% endfor %}
+        {% endif %}
+        {% if page_obj.has_next %}
+        <a class="page-link" href="?page={{ page_obj.next_page_number }}">Следующая</a>
+        {% endif %}
+    </div>
 {% endblock %}
